# chatgpt-register-k12

./: README.md  config.example.yaml  pyproject.toml
chatgpt_register_k12/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  workspace_state.py
chatgpt_register_k12/export/: formats.py  sub2api.py
chatgpt_register_k12/login/: login_flow.py
chatgpt_register_k12/register/: headers.py  mail_provider.py  registrar.py  session.py
chatgpt_register_k12/utils/: jwt.py  pkce.py  proxy.py  sentinel.py
chatgpt_register_k12/webui/: __init__.py  __main__.py  jobs.py  redact.py  server.py  terminal.py
chatgpt_register_k12/webui/static/: app.js  index.html  style.css
chatgpt_register_k12/workspace/: joiner.py
chatgpt_register_sub2api/: cli.py  config.py  pipeline.py
chatgpt_register_sub2api/export/: formats.py
chatgpt_register_sub2api/login/: login_flow.py
chatgpt_register_sub2api/register/: mail_provider.py
chatgpt_register_sub2api/webui/: __init__.py  __main__.py  jobs.py  server.py  terminal.py
chatgpt_register_sub2api/webui/static/: app.js  index.html  style.css
tests/: test_offline_flows.py  test_webui_workspace_flow.py
