[project]
name = "chatgpt-register-k12"
version = "0.1.0"
description = "ChatGPT 账号自动注册 + K12 母号加入 + 多格式 JSON 导出"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.8.0",
    "pyyaml>=6.0",
]

[project.scripts]
chatgpt-register = "chatgpt_register_k12.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatgpt_register_k12"]

[tool.hatch.build.targets.wheel.force-include]
"chatgpt_register_k12/webui/static" = "chatgpt_register_k12/webui/static"
